--- a/PartsUnlimited5.Web/wwwroot/css/site.css
+++ b/PartsUnlimited5.Web/wwwroot/css/site.css
@@ -69,3 +69,11 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*#login-link {
+    background-color:white;
+}
+
+#register-link {
+    background-color:white;
+}*/
