--- a/PartsUnlimited5.Web/Views/Inventory/Browse.cshtml
+++ b/PartsUnlimited5.Web/Views/Inventory/Browse.cshtml
@@ -1,8 +1,25 @@
-﻿@model int
+﻿@model IEnumerable<Product> 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<h3>You selected @Model</h3>
+<div class="row">
+    @foreach (var product in Model)
+    {
+        <div class="col-md-3">
+            <a asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
+                <div class="card">
+                    <div class="card-header card-header-dim">
+                        <span style="font-weight: bold; font-size:18px;">@product.Title</span>
+                    </div>
+                    <div class="card-body">
+                        <img class="img-fluid" src="/images/@product.ProductArtUrl" alt="@product.Title" />
+                    </div>
+                    <div class="card-footer">
+                        <span style="font-weight: normal; font-size:16px;">@product.Price.ToString("C")</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    }
+</div>
