--- a/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
+++ b/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Browse" asp-route-category="Oil">Oil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Browse" asp-route-category="More">More</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Browse" asp-route-category="All">All</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-dark dropdown-toggle" id="navbarDropdown" role="button" ata-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stores</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="1">Web Store</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="2">Store 1</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="3">Store 2</a>
+                            </div>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
