--- a/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
+++ b/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Browse" asp-route-category="All">All</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-dark dropdown-toggle" id="navbarDropdown" role="button" ata-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stores</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Stores
+                            </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="1">Web Store</a>
                                 <div class="dropdown-divider"></div>
@@ -46,6 +48,19 @@
                                 <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="3">Store 2</a>
                             </div>
                         </li>
+                        @*<li class="nav-item dropdown">
+                            <a class="nav-link text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" ata-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Stores
+                            </a>
+                            
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="1">Web Store</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="2">Store 1</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="3">Store 2</a>
+                            </div>
+                        </li>*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
