--- a/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
+++ b/PartsUnlimited5.Web/Views/Shared/_Layout.cshtml
@@ -41,11 +41,11 @@
                                 Stores
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="1">Web Store</a>
+                                <a class="dropdown-item" asp-controller="Inventory" asp-action="Stores" asp-route-id="1">Web Store</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="2">Store 1</a>
+                                <a class="dropdown-item" asp-controller="Inventory" asp-action="Stores" asp-route-id="2">Store 1</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-controller="Stores" asp-action="StoreWithProducts" asp-route-id="3">Store 2</a>
+                                <a class="dropdown-item" asp-controller="Inventory" asp-action="Stores" asp-route-id="3">Store 2</a>
                             </div>
                         </li>
                     </ul>
